--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,8 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Inconsolata:wght@200&display=swap");
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: "Inconsolata", monospace;
 }
