--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,3 +5,12 @@
 body {
   font-family: "Inconsolata", monospace;
 }
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+/* For IE, Edge and Firefox */
+.scrollbar-hide {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
