--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,3 +14,41 @@ body {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
+
+/* timeline.module.css */
+.timeline-container {
+  scroll-snap-type: y mandatory;
+  -webkit-overflow-scrolling: touch;
+  overflow-y: scroll;
+}
+
+@media (min-width: 768px) {
+  .timeline-container {
+    scroll-snap-type: x mandatory;
+    overflow-x: scroll;
+  }
+
+  .timeline-item:hover {
+    transform: scale(1);
+  }
+}
+@media (hover: hover) and (max-width: 767px) {
+  .timeline-item:hover {
+    transform: scale(0.99);
+    transition: transform 0.5s ease;
+  }
+}
+
+.timeline-item {
+  min-height: 100%;
+  min-width: 100%;
+  scroll-snap-align: start;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+.timeline-scrollbar {
+  -ms-overflow-style: none;
+}
